<resources>
    <string name="app_name">鸽子</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="settings">设置</string>
    <string name="tab_cage">笼位</string>
    <string name="tab_egg">鸽蛋</string>
    <string name="tab_task">任务</string>
    <string name="refresh">刷新</string>
    <string name="add">添加</string>
    <string name="reset">重置</string>
    <string name="filter">筛选</string>
    <string name="grouping">分组</string>
    <string name="lbl_room">房间*</string>
    <string name="lbl_group">分组*</string>
    <string name="lbl_layer">分层*</string>
    <string name="lbl_first">起始*</string>
    <string name="lbl_last">结束*</string>
    <string name="lbl_status">状态*</string>
    <string name="lbl_cage">笼位*</string>
    <string name="lbl_laying">下蛋*</string>
    <string name="lbl_count">数量*</string>
    <string name="lbl_review">检查</string>
    <string name="lbl_hatch">孵化</string>
    <string name="lbl_sale">出栏</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="feed_history">养殖记录</string>
    <string name="not_implemented">还没有实现</string>
    <string name="first_cant_gt_last">起始序号不能大于结束序号</string>
    <string name="reset_confirm">是否放弃今日工作进度并重新计算今日工作内容？</string>
    <string name="del_egg_confirm">确定要删除这条养殖记录？</string>
    <string name="restore_warn_message">清除所有数据后从选定文件恢复\n操作前请再次确认\n选定文件: %1$s</string>
    <string name="restore_complete_message">恢复成功: 笼位=%1$d,鸽蛋=%2$d</string>
    <string name="restore_error_message">恢复失败: %1$s</string>
    <string name="backup_warn_message">是否备份当前数据到文件\n路径: %1$s</string>
    <string name="backup_complete_message">备份成功: 笼位=%1$d,鸽蛋=%2$d</string>
    <string name="backup_error_message">备份失败: %1$s</string>
    <string name="waiting_message">请稍等...</string>
</resources>
