<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/reset"
        android:icon="@drawable/ic_menu_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        android:icon="@drawable/ic_menu_filter"
        app:showAsAction="never" />
</menu>